<resources>
    <string name="app_name" translatable="false">Chocola</string>
    <string name="empty" translatable="false"/>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark</string>
    <string name="light_mode">Light</string>
    <string name="amoled_mode">Amoled</string>
    <string name="version">Version</string>
    <string name="support">Support</string>
    <string name="update">Check updates</string>
    <string name="about">About</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="bitrate">Bitrate</string>
    <string name="previous_song">Previous Song</string>
    <string name="play_pause_button">Play/Pause Button</string>
    <string name="next_button">Next Song</string>
    <string name="no_artists_found">No artists found!</string>
    <string name="artwork">Artwork</string>
    <string name="artists">Artists</string>
    <string name="albums">Album</string>
    <string name="music">Tracks</string>
    <string name="cm_by_sosauce">Chocola by sosauce</string>
    <string name="app_icon">App Icon</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="more">More</string>
    <string name="hi_there">Hi there!</string>
    <string name="permission_needed">It seems like CuteMusic doesn\'t have the permission to access your tracks! You can grant it below!</string>
    <string name="permission_granted">Permission granted, you shall continue…</string>
    <string name="request_permission">Grant permission</string>
    <string name="next_step">Next step</string>
    <string name="no_music_title">No tracks found!</string>
    <string name="no_music_desc">Why did you install the app then?</string>
    <string name="no_music_tip">Tip: Don\'t forget to whitelist folders you want to scan in settings!</string>
    <string name="error_deleting_song">There was an error deleting the song.</string>
    <string name="deleting_song_OK">Successfully deleted song.</string>
    <string name="okay">Okay</string>
    <string name="misc">Misc</string>
    <string name="no_albums_found">No albums found!</string>
    <string name="follow_sys">Follow system</string>
    <string name="system">System</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="playback_speed">Set playback speed</string>
    <string name="yes">Yes</string>
    <string name="initial_folder_selection">Select folders you want to whitelist, others will be blacklisted</string>
    <string name="blacklisted_folders">Blacklisted folders</string>
    <string name="delete_folder">Delete folder</string>
    <string name="folder_delete_u_sure">Are you sure you want to delete this folder?</string>
    <string name="alrdy_blacklisted">Folder already blacklisted!</string>
    <string name="pls_restart">Please restart the app for changes to take effect!</string>
    <string name="use_sys_font">Use system font</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="track_nb">Track number</string>
    <string name="disc_nb">Disc number</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ntg_playing">Nothing playing!</string>
    <string name="ui">UI</string>
    <string name="use_art">Material art</string>
    <string name="success">Success</string>
    <string name="error_saving">Error while saving changes.</string>
    <string name="editor">Editor</string>
    <string name="details">Details</string>
    <string name="classic_slider">Use classic slider</string>
    <string name="cancel">Cancel</string>
    <string name="set_sap">Set speed and pitch</string>
    <string name="set_speed">Set speed</string>
    <string name="set_pitch">Set pitch</string>
    <string name="speed">Speed</string>
    <string name="pitch">Pitch</string>
    <string name="rate">Rate</string>
    <string name="snap">Snap speed &amp; pitch</string>
    <string name="share">Share</string>
    <string name="show_close_button">Show close button</string>
    <string name="duration">Duration</string>
    <string name="folders">Folders</string>
    <string name="manage_shown_tabs">Manage shown tabs</string>
    <string name="set_sleep_timer">Set sleep timer</string>
    <string name="go_to">Go to: %s</string>
    <string name="no_lyrics_note">No lyrics found!</string>
    <string name="open_eq">Equalizer</string>
    <string name="from_saf">This track comes from the S.A.F</string>
    <string name="open_saf">Open S.A.F to add tracks</string>
    <string name="blacklisted">Blacklisted</string>
    <string name="not_blacklisted">Not blacklisted</string>
    <string name="whitelisted">Whitelisted</string>
    <string name="saf_manager">S.A.F manager</string>
    <string name="saf">S.A.F</string>
    <string name="no_playlists">No playlist found!</string>
    <string name="alrdy_in_playlist">Track already in playlist!</string>
    <string name="del_playlist">Delete playlist</string>
    <string name="modify">Modify</string>
    <string name="modify_playlist">Modify playlist</string>
    <string name="create_playlist">Create playlist</string>
    <string name="create">Create</string>
    <string name="playlist">Playlist</string>
    <string name="playlists">Playlists</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="art_description">App\'s theme will be based on the currently playing song\'s art.</string>
    <string name="group_tracks">Group tracks by folders</string>
    <string name="file_name">File name</string>
    <string name="nothing">Nothing to search for</string>
    <string name="search_lyrics">Search for lyrics</string>
    <string name="song_loading">Song loading…</string>
    <string name="use_carousel">Use carousel</string>
    <string name="search_here">Search here</string>
    <string name="click_hint">Click me!</string>
    <string name="no_of_grids">Number of grids</string>
    <string name="show_shuffle_btn">Show shuffle button</string>
    <string name="not_m3u_file">Not a m3u file!</string>
    <string name="m3u_saved_good">m3u file saved successfully!</string>
    <string name="import_playlist">Import playlist</string>
    <string name="export_playlist">Export playlist</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="seek_prev_song">Seek to previous song</string>
    <string name="seek_next_song">Seek to next song</string>
    <string name="sort">Sort</string>
    <string name="stop_playback">Stop playback</string>
    <string name="screen_selection">Screen selection</string>
    <string name="emoji">Emoji</string>
    <string name="remove_emoji">Remove emoji</string>
    <string name="look_and_feel">Look &amp; feel</string>
    <string name="look_and_feel_desc">The music is yours, why not the style too?</string>
    <string name="now_playing">Now playing</string>
    <string name="now_playing_desc">Make it your style!</string>
    <string name="library">Library</string>
    <string name="library_desc">Manage all your tracks, like a DJ!</string>
    <string name="more_desc">Other settings that didn\'t deserve their own page.</string>
    <string name="add_queue">Add to queue</string>
    <string name="import_lrc">Import .lrc file</string>
    <string name="slider">Slider</string>
    <string name="thumbless_slider">Thumbless slider</string>
    <string name="art_as_bg">Art as background</string>
    <string name="default_text">Default</string>
    <string name="font">Font</string>
    <string name="cute_searchbar">CuteSearchbar</string>
    <string name="show_back_button">Show back button</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="shuffle">Shuffle</string>
    <string name="no_result_found">No result found!</string>
    <string name="better_luck_next_time">Better luck next time!</string>
    <string name="no_playlist_desc">You\'d be cool if you created one</string>
    <string name="no_album_desc">You rock singles and that\'s okay</string>
    <string name="no_artist_desc">I\'m sure you sing better anyways</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="lyrics">Lyrics</string>
    <string name="playback_controls">Playback controls</string>
    <string name="playback_controls_desc">For true music nerds!</string>
    <string name="audio">Audio</string>
    <string name="pause_on_mute">Pause on mute</string>
    <string name="pause_on_mute_desc">Playback will be paused when the device\'s volume is muted</string>
    <string name="keep_alive">Keep alive</string>
    <string name="keep_alive_desc">Keep playing music when the app is removed from recents</string>
    <string name="its_empty_here">It\'s pretty empty here</string>
    <string name="empty_playlist_desc">*Cricket noises*</string>
    <string name="date_modified">Date modified</string>
    <string name="name">Name</string>
    <string name="number_of_tracks">Number of tracks</string>
    <string name="number_of_albums">Number of albums</string>
    <string name="color_picker">Color picker</string>
    <string name="save">Save</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="use_expr_palette">Use expressive palette</string>
    <string name="scan">Scan</string>
    <string name="min_track_length_hint">You can also decide to not query tracks shorter than the specified duration</string>
    <string name="min_track_length_text">Min track duration</string>
    <string name="min_track_duration_desc">Tracks shorter than the specified duration will be not fetched.</string>
    <string name="as_added">As added</string>
    <string name="unknown">Unknown</string>
    <string name="tags">Tags</string>
    <string name="color">Color</string>
    <string name="click_to_add">Click to add</string>
    <string name="playlist_tag_add">Add new tag</string>
    <string name="playlist_tag_exists">Tag already exists for this playlist.</string>
    <string name="playlist_tag_no_edit">You can\'t edit tags once they\'re created, but you can delete them</string>
    <string name="already_in_queue">Already in queue</string>
    <string name="already_in_playlist">Track already in playlist</string>
    <string name="new_rate">Enter new rate between %1$.1f and %2$d</string>
    <string name="rate_error">Rate should be in range of %1$.1f and %2$d.</string>
    <string name="hide_from_tracklist">Hide from tracklist</string>
    <string name="hidden_tracks">Hidden tracks</string>
    <string name="show_album_name">Show album name</string>
    <string name="alignment">Alignment</string>
    <string name="font_size">Font size</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="palette">Palette</string>
    <string name="no_hidden_tracks">No hidden tracks!</string>
    <string name="no_saf_tracks">No S.A.F tracks!</string>
    <string name="playback">Playback</string>
    <string name="seek_buttons_duration">Seek buttons duration</string>
    <string name="centered_title">Centered title</string>
    <string name="ongoing_sleep_timer">You have an ongoing sleep timer</string>
    <string name="timer_will_end_in">Current timer will end in:</string>
    <string name="equalizer">Equalizer</string>
    <string name="enable_equalizer">Enable equalizer</string>
    <string name="path">Path</string>
    <string name="channels">Channels</string>
    <string name="no">No</string>
    <string name="about_track">About track</string>
    <string name="about_file">About file</string>
    <string name="name_and_emoji">Name &amp; emoji</string>
    <string name="load">Load</string>
</resources>